--- a/build.gradle
+++ b/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     testImplementation "org.seleniumhq.selenium:selenium-support:4.0.0"
     testRuntimeOnly "org.seleniumhq.selenium:selenium-chrome-driver:4.0.0"
     testRuntimeOnly "org.seleniumhq.selenium:selenium-firefox-driver:4.0.0"
+    implementation "mysql:mysql-connector-java:8.0.29"
 }
 
 bootRun {
